--- a/backend/package.json
+++ b/backend/package.json
@@ -1,13 +1,13 @@
 {
   "name": "rube-web-backend",
-  "version": "1.0.0",
-  "description": "Backend server for Rube Web Interface",
+  "version": "2.0.0",
+  "description": "Backend server for Rube Web Interface with database support",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js"
   },
-  "keywords": ["rube", "ai", "automation"],
+  "keywords": ["rube", "ai", "automation", "database"],
   "author": "rumbleveer-spec",
   "license": "MIT",
   "dependencies": {
@@ -15,7 +15,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "axios": "^1.6.0",
-    "body-parser": "^1.20.2"
+    "body-parser": "^1.20.2",
+    "sqlite3": "^5.1.6"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
